added roles USER ADMIN. editted ban and unBan